# taskflow_orchestrator

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  README.ru.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  0002_add_video_draft_task_type.py
app/: __init__.py  cli.py  main.py
app/api/: dependencies.py  errors.py  routes.py  schemas.py
app/core/: config.py  security.py
app/db/: __init__.py  models.py  repositories.py  session.py
app/services/: metrics.py  summarization.py  tasks.py  video_factory.py
app/workers/: celery_app.py  tasks.py
docs/: ARCHITECTURE.md
scripts/: smoke_test.sh
tests/: conftest.py  test_api.py  test_metrics.py  test_security.py  test_task_service.py
