[project]
name = "taskflow-orchestrator"
version = "0.1.0"
description = "Production-style FastAPI and Celery backend for reliable async task orchestration."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.13.3",
    "celery>=5.4.0",
    "fastapi>=0.115.0",
    "psycopg[binary]>=3.2.3",
    "pydantic-settings>=2.6.0",
    "redis>=5.1.0",
    "sqlalchemy>=2.0.35",
    "uvicorn[standard]>=0.30.6",
]

[dependency-groups]
dev = [
    "httpx>=0.27.2",
    "pytest>=8.3.3",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.9",
]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = [".venv", ".uv-cache"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"
